# BuckeyCore

./: CMakeLists.txt  Doxyfile  README.md  mainpage.dox
asr/: ASR.dox  ASRService.cpp  ASRService.h  ASRServiceAdapter.cpp  ASRServiceAdapter.h  ASRServiceProxy.cpp  ASRServiceProxy.h  CMakeLists.txt  CMakeLists.txt~  buckey-asr.pc.in  ca.l5.expandingdev.Buckey.ASR.xml
mode/: ca.l5.expandingdev.Buckey.Mode.xml
service/: CMakeLists.txt  Service.cpp  Service.h  ServiceAdapter.cpp  ServiceAdapter.h  ServiceProxy.cpp  ServiceProxy.h  buckey-service.pc.in  ca.l5.expandingdev.Buckey.Service.xml
tts/: CMakeLists.txt  TTSService.h  TTSServiceAdapter.cpp  TTSServiceAdapter.h  TTSServiceProxy.cpp  TTSServiceProxy.h  buckey-tts.pc.in  ca.l5.expandingdev.Buckey.TTS.xml
uio/: CMakeLists.txt  UIO.cpp  UIO.h  buckey-uio.pc.in  ca.l5.expandingdev.Buckey.UIO.xml  uio.dox
